--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     />
     <meta
       name="description"
-      content="Run Super Resulotion in Your Local Browser. Your images never leave your device. Powered by TensorFlow.js and RealESRGAN. Support computing with WebGL and WebGPU."
+      content="Online image upscale. Powered by TensorFlow.js and RealESRGAN. Support computing with WebGL and WebGPU."
     />
-    <title>Run Super Resulotion in Your Browser</title>
+    <title>Online Image Upscale</title>
   </head>
   <body>
     <div id="app"></div>
